fix(#40): apply VM parameters to copied run configuration instead of original
The run/debug actions created a copy of the selected run configuration via
createFactory().create() but then mutated the original configuration object
(setName, setVMParameters). This caused the executed copy to have wrong settings
while the saved configuration was permanently corrupted with accumulating
-Dtests.to.run= parameters.

Additionally:
- Add ActionUpdateThread.BGT override to fix grayed-out actions on 2022.3+
- Extract shared execution logic to XmlAbstractAction.executeWithTestFiles()
- Guard against StringIndexOutOfBoundsException in config type parsing
- Guard against NPE when dialog OK clicked with no selection
- Short-circuit containsAtLeastOneTestFile() for better UI performance
- Improve error messages to show config name/type and required types
- Fix inconsistent debug group ID in plugin.xml
- Make RunConfigurationDialogWrapper.runConfigIcons private static final
- Add unit tests (JUnit 5, Mockito, AssertJ)